2nd attempt to fix about page margin on mobile

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -113,6 +113,6 @@
   }
 
   .about-container > .content-page-wrapper > .right-column {
-    margin-top: 42px;
+    margin-top: 205px;
   }
 }
